--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
     "@types/react-slick": "^0.23.10",
+    "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-kakao-maps-sdk": "^1.1.11",
-    "react-naver-maps": "^0.1.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
-    "swiper": "^10.0.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
